--- a/LSTM_seq2seq.ipynb
+++ b/LSTM_seq2seq.ipynb
@@ -6,7 +6,6 @@
       "name": "LSTM_seq2seq.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,8 +32,8 @@
         "colab_type": "text"
       },
       "source": [
-        "'''\n",
-        "#Sequence to sequence example in Keras (character-level).\n",
+        "\n",
+        "# Sequence to sequence example in Keras (character-level).\n",
         "This script demonstrates how to implement a basic character-level\n",
         "sequence-to-sequence model. We apply it to translating\n",
         "short English sentences into short French sentences,\n",
@@ -76,8 +75,7 @@
         "   ](https://arxiv.org/abs/1409.3215)\n",
         "  - [Learning Phrase Representations using\n",
         "    RNN Encoder-Decoder for Statistical Machine Translation\n",
-        "    ](https://arxiv.org/abs/1406.1078)\n",
-        "'''"
+        "    ](https://arxiv.org/abs/1406.1078)\n"
       ]
     },
     {
@@ -340,6 +338,19 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IdpgrrwVghvm",
+        "colab_type": "text"
+      },
+      "source": [
+        " # Turn the sentences into 3 Numpy arrays\n",
+        "- encoder_input_data is a 3D array of shape (num_pairs, max_english_sentence_length, num_english_characters) containing a one-hot vectorization of the English sentences.\n",
+        "- decoder_input_data is a 3D array of shape (num_pairs, max_french_sentence_length, num_french_characters) containg a one-hot vectorization of the French sentences.\n",
+        "- decoder_target_data is the same as decoder_input_data but offset by one timestep. decoder_target_data[:, t, :] will be the same as decoder_input_data[:, t + 1, :]."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "8zVM0NSxOJh9",
@@ -392,33 +403,13 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "V1Ze60tUXuTM",
-        "colab_type": "code",
-        "outputId": "fc669c54-d797-4a11-aa17-1b9677c04ef7",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "id": "ISxMYrsVg3lE",
+        "colab_type": "text"
       },
       "source": [
-        "input_texts[15]"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'Go on.'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 132
-        }
+        "**Translate text from English to French**"
       ]
     },
     {
@@ -440,17 +431,18 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "hFidzqW1WAGY",
-        "colab_type": "code",
-        "colab": {}
+        "id": "0iOpMnAch3jH",
+        "colab_type": "text"
       },
       "source": [
-        "test_1=convert_text_to_encoder_input('Go on.')"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        " # Define a basic LSTM-based Seq2Seq model \n",
+        " 1. Define an input sequence and process it\n",
+        " 2. Discard `encoder_outputs` and only keep the states. \n",
+        " 3. Set up the decoder, using `encoder_states` as initial state.\n",
+        " 4.  We set up our decoder to return full output sequences, and to return internal states as well"
+      ]
     },
     {
       "cell_type": "code",
@@ -460,6 +452,12 @@
         "colab": {}
       },
       "source": [
+        "# Define an input sequence and process it.\n",
+        "encoder_inputs = Input(shape=(None, num_encoder_tokens))\n",
+        "encoder = LSTM(latent_dim, return_state=True)\n",
+        "encoder_outputs, state_h, state_c = encoder(encoder_inputs)\n",
+        "# We discard `encoder_outputs` and only keep the states.\n",
+        "encoder_states = [state_h, state_c]\n",
         "# Set up the decoder, using `encoder_states` as initial state.\n",
         "decoder_inputs = Input(shape=(None, num_decoder_tokens))\n",
         "# We set up our decoder to return full output sequences,\n",
@@ -498,6 +496,19 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "90oqq9QHkKAt",
+        "colab_type": "text"
+      },
+      "source": [
+        "# inference mode\n",
+        "1. Encode the input sentence and retrieve the initial decoder state\n",
+        "2. Run one step of the decoder with this initial state and a \"start of sequence\" token as target. The output will be the next target character.\n",
+        "3. Append the target character predicted and repeat."
+      ]
     },
     {
       "cell_type": "markdown",
