--- a/LSTM_seq2seq.ipynb
+++ b/LSTM_seq2seq.ipynb
@@ -176,9 +176,7 @@
         "latent_dim = 256  # Latent dimensionality of the encoding space.\n",
         "num_samples = 10000  # Number of samples to train on.\n",
         "# Path to the data txt file on disk.\n",
-        "data_path = 'fra.txt'\n",
-        "\n",
-        "os.listdir(os.getcwd())"
+        "data_path = 'fra.txt'\n"
       ],
       "execution_count": 0,
       "outputs": [
@@ -344,7 +342,7 @@
         "colab_type": "text"
       },
       "source": [
-        " # Turn the sentences into 3 Numpy arrays\n",
+        " # Turn the sentences into 3D Numpy arrays\n",
         "- encoder_input_data is a 3D array of shape (num_pairs, max_english_sentence_length, num_english_characters) containing a one-hot vectorization of the English sentences.\n",
         "- decoder_input_data is a 3D array of shape (num_pairs, max_french_sentence_length, num_french_characters) containg a one-hot vectorization of the French sentences.\n",
         "- decoder_target_data is the same as decoder_input_data but offset by one timestep. decoder_target_data[:, t, :] will be the same as decoder_input_data[:, t + 1, :]."
