--- a/LSTM_seq2seq.ipynb
+++ b/LSTM_seq2seq.ipynb
@@ -389,13 +389,7 @@
         "            # and will not include the start character.\n",
         "            decoder_target_data[i, t - 1, target_token_index[char]] = 1.\n",
         "    decoder_input_data[i, t + 1:, target_token_index[' ']] = 1.\n",
-        "    decoder_target_data[i, t:, target_token_index[' ']] = 1.\n",
-        "# Define an input sequence and process it.\n",
-        "encoder_inputs = Input(shape=(None, num_encoder_tokens))\n",
-        "encoder = LSTM(latent_dim, return_state=True)\n",
-        "encoder_outputs, state_h, state_c = encoder(encoder_inputs)\n",
-        "# We discard `encoder_outputs` and only keep the states.\n",
-        "encoder_states = [state_h, state_c]"
+        "    decoder_target_data[i, t:, target_token_index[' ']] = 1.\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -407,7 +401,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**Translate text from English to French**"
+        ""
       ]
     },
     {
@@ -418,12 +412,7 @@
         "colab": {}
       },
       "source": [
-        "def convert_text_to_encoder_input(test_text):\n",
-        "  test_input_data = np.zeros( (1, max_encoder_seq_length, num_encoder_tokens), dtype='float32')\n",
-        "  for t, char in enumerate(test_text):\n",
-        "    test_input_data[ 0,t, input_token_index[char]] = 1.0\n",
-        "  test_input_data[0, t + 1:, input_token_index[' ']] = 1.0\n",
-        "  return test_input_data"
+        ""
       ],
       "execution_count": 0,
       "outputs": []
@@ -623,11 +612,7 @@
       "metadata": {
         "id": "-va_sH1oPPEa",
         "colab_type": "code",
-        "outputId": "b8bc5123-7547-43d9-aed3-292fd4c750eb",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 969
-        }
+        "colab": {}
       },
       "source": [
         "#for seq_index in range(6,20,1):\n",
@@ -640,70 +625,35 @@
         "#    print('Decoded sentence:', decoded_sentence)"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "-\n",
-            "Input sentence: Wow!\n",
-            "Decoded sentence: Ça alors !\n",
-            "\n",
-            "-\n",
-            "Input sentence: Fire!\n",
-            "Decoded sentence: Au feu !\n",
-            "\n",
-            "-\n",
-            "Input sentence: Help!\n",
-            "Decoded sentence: À l'aide !\n",
-            "\n",
-            "-\n",
-            "Input sentence: Jump.\n",
-            "Decoded sentence: Saute.\n",
-            "\n",
-            "-\n",
-            "Input sentence: Stop!\n",
-            "Decoded sentence: Arrêtez !\n",
-            "\n",
-            "-\n",
-            "Input sentence: Stop!\n",
-            "Decoded sentence: Arrêtez !\n",
-            "\n",
-            "-\n",
-            "Input sentence: Stop!\n",
-            "Decoded sentence: Arrêtez !\n",
-            "\n",
-            "-\n",
-            "Input sentence: Wait!\n",
-            "Decoded sentence: Attends !\n",
-            "\n",
-            "-\n",
-            "Input sentence: Wait!\n",
-            "Decoded sentence: Attends !\n",
-            "\n",
-            "-\n",
-            "Input sentence: Go on.\n",
-            "Decoded sentence: Poursuivez.\n",
-            "\n",
-            "-\n",
-            "Input sentence: Go on.\n",
-            "Decoded sentence: Poursuivez.\n",
-            "\n",
-            "-\n",
-            "Input sentence: Go on.\n",
-            "Decoded sentence: Poursuivez.\n",
-            "\n",
-            "-\n",
-            "Input sentence: Hello!\n",
-            "Decoded sentence: Salut !\n",
-            "\n",
-            "-\n",
-            "Input sentence: Hello!\n",
-            "Decoded sentence: Salut !\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "48EqPhpzlBYH",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Translate text from English to French**"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d-bMv_jblA05",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def convert_text_to_encoder_input(test_text):\n",
+        "  test_input_data = np.zeros( (1, max_encoder_seq_length, num_encoder_tokens), dtype='float32')\n",
+        "  for t, char in enumerate(test_text):\n",
+        "    test_input_data[ 0,t, input_token_index[char]] = 1.0\n",
+        "  test_input_data[0, t + 1:, input_token_index[' ']] = 1.0\n",
+        "  return test_input_data"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -720,10 +670,13 @@
         "stop_condition = False\n",
         "while not stop_condition :\n",
         "  word_in_english =input()\n",
-        "  input_to_model = convert_text_to_encoder_input(word_in_english)\n",
-        "  word_in_french = decode_sequence(input_to_model)\n",
-        "  print('Input sentence:', word_in_english)\n",
-        "  print('Decoded sentence:', word_in_french )"
+        "  if word_in_english != '**end'\n",
+        "    input_to_model = convert_text_to_encoder_input(word_in_english)\n",
+        "    word_in_french = decode_sequence(input_to_model)\n",
+        "    print('Input sentence:', word_in_english)\n",
+        "    print('Decoded sentence:', word_in_french )\n",
+        "  else:\n",
+        "    stop_condition = True"
       ],
       "execution_count": 0,
       "outputs": [
