--- a/LSTM_seq2seq.ipynb
+++ b/LSTM_seq2seq.ipynb
@@ -160,6 +160,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SHi-sglel5-2",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Model an Training Setting**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "aL2lnLiNBbn7",
@@ -176,7 +186,7 @@
         "latent_dim = 256  # Latent dimensionality of the encoding space.\n",
         "num_samples = 10000  # Number of samples to train on.\n",
         "# Path to the data txt file on disk.\n",
-        "data_path = 'fra.txt'\n"
+        "data_path = 'fra.txt'"
       ],
       "execution_count": 0,
       "outputs": [
@@ -470,7 +480,29 @@
         "# Define the model that will turn\n",
         "# `encoder_input_data` & `decoder_input_data` into `decoder_target_data`\n",
         "model = Model([encoder_inputs, decoder_inputs], decoder_outputs)\n",
-        "\n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5q2BdD66luYW",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Train your model**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T6ulb4MSlkHe",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "# Run training\n",
         "model.compile(optimizer='rmsprop', loss='categorical_crossentropy',\n",
         "              metrics=['accuracy'])\n",
