--- a/LSTM_seq2seq.ipynb
+++ b/LSTM_seq2seq.ipynb
@@ -166,7 +166,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**Model an Training Settings**"
+        "**Model an Training Setting**"
       ]
     },
     {
